[dependencies]
aok = "0.1.15"

[package]
name = "bintxt"
version = "0.1.4"
edition = "2021"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/bintxt"
description = "bintxt"

[dev-dependencies]
aok = "0.1.15"
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.40.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.docs.rs]
all-features = true
