[dependencies]
aok = "0.1.15"
boa_engine = "0.19.1"
boa_runtime = "0.19.1"
thiserror = "1.0.65"
tracing = "0.1.40"

[package]
name = "bjs"
version = "0.1.11"
edition = "2021"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/bjs"
description = "bjs"

[dev-dependencies]
anyhow = "1.0.91"
aok = "0.1.15"
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.41.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.docs.rs]
all-features = true