[dependencies]
aok = "0.1.14"
base64 = "0.22.1"
blake3 = "1.5.3"
bls12_381 = { version = "0.8.0", features = ["experimental"] }
group = "0.13.0"
rand = "0.8.5"
thiserror = "1.0.63"

[package]
name = "bls"
version = "0.1.4"
edition = "2021"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/bls"
description = "bls"

[dev-dependencies]
aok = "0.1.14"
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.39.2"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.docs.rs]
all-features = true