[dependencies]
aok = "0.1.18"
base-x = "0.2.11"

[package]
name = "burl"
version = "0.1.5"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/burl"
description = "burl"

[dev-dependencies]
aok = "0.1.18"
intbin = "0.2.3"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.docs.rs]
all-features = true
