[dependencies]
aok = "0.1.15"
cfapi = "0.11.0"
serde_yaml = "0.9.34"
thiserror = "1.0.63"

[dependencies.genv]
version = "0.1.15"
path = "../genv"

[package]
name = "cfha"
version = "0.1.3"
edition = "2021"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/cfha"
description = "cfha"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.genv]
path = "../genv"
version = "0.1.15"

[dev-dependencies.tokio]
version = "1.39.3"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]
