[package]
name = "change"
version = "0.1.16"
edition = "2021"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/change"
description = "change"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
aok = "0.1.17"
pc = { version = "0.1.12", path = "../pc" }
serde = { version = "1.0.218", features = ["derive"] }
walkdir = "2.5.0"

[dependencies.burl]
version = "0.1.4"
path = "../burl"

[dependencies.ifs]
version = "0.1.44"
path = "../ifs"
features = ["fs", "unix_path"]

[dependencies.set_mtime]
version = "0.1.8"
path = "../set_mtime"

[dependencies.xxhash-rust]
version = "0.8.15"
features = ["xxh3"]

[dev-dependencies]
aok = "0.1.17"
loginit = "0.1.18"
static_init = "1.0.3"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.43.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]