[dependencies]
aok = "0.1.12"
len-trait = { version = "0.6.1", features = ["nightly"] }

[package]
name = "citer"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/citer"
description = "citer"

[dev-dependencies]
aok = "0.1.12"
loginit = "0.1.13"
static_init = "1.0.3"
tracing = "0.1.40"

[dev-dependencies.tokio]
version = "1.38.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.docs.rs]
all-features = true