[dependencies]
aok = "0.1.18"
rand = { version = "0.9.2", optional = true }

[package]
name = "citer"
version = "0.1.12"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/citer"
description = "citer"

[dev-dependencies]
aok = "0.1.18"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
rand = ["dep:rand"]
