[package]
name = "ckv"
version = "0.1.13"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/ckv"
description = "ckv"

[package.metadata.docs.rs]
all-features = true

[features]
default = [ ]

[dependencies]
aok = "0.1.18"
futures = "0.3.31"
gxhash = "3.5.0"
serde_yaml = "0.9.34"

[dependencies.aws-sdk-s3]
version = "1.109.0"
features = [ "behavior-version-latest" ]

[dependencies.ifs]
version = "0.1.47"
path = "../ifs"
features = [ "fs" ]

[dependencies.serde]
version = "1.0.228"
features = [ "derive" ]

[dev-dependencies]
aok = "0.1.18"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.48.0"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]
