[package]
name = "clap_args"
version = "0.1.7"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/dev/clap_args"
description = "clap_args"
keywords = [ ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]

[features]
default = [ ]
macro = [ ]

[dependencies]
aok = "0.1.18"
const-str = "0.7.0"
current_platform = "0.2.0"

[dependencies.clap]
version = "4.5.50"
features = [ "string" ]

[dependencies.xerr]
version = "0.1.16"
path = "../xerr"

[dev-dependencies]
aok = "0.1.18"
loginit = "0.1.18"
static_init = "1.0.4"
tracing = "0.1.41"

[dev-dependencies.tokio]
version = "1.48.0"
features = [ "macros", "rt", "rt-multi-thread", "time", "sync" ]
