[package]
name = "cli_tmpl"
version = "0.1.2"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/i18n-site/rust.git"
homepage = "https://github.com/i18n-site/rust/tree/main/cli_tmpl"
description = "cli_tmpl"

[dependencies]
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tracing = "0.1.41"

[dependencies.serde]
version = "1.0.219"
features = [ "derive" ]

[dependencies.clap]
version = "4.5.40"
features = [ "cargo" ]

[dependencies.cmdv]
version = "0.1.11"
path = "../cmdv"

[dependencies.i18n_bgu]
version = "0.1.21"
path = "../i18n_bgu"

[dependencies.tokio]
version = "1.45.1"
features = [ "macros", "rt", "rt-multi-thread", "time", "fs", "io-util" ]

[dependencies.aok]
version = "0.1.17"
path = "../aok"
